outputs/tsp_constructive-constructive/mcts-ahd/2025-09-28_08-09-19/evaluations/problem_eval-2783851135553102682_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance decreasing as unvisited nodes decrease (weight = 0.5 / (1 + remaining_nodes)), while penalizing nodes close to the destination to encourage exploration.}
                                                                                                                                                                       ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance decreasing as unvisited nodes decrease (weight = 0.5 / (1 + remaining_nodes)), while penalizing nodes close to the destination to encourage exploration.}
                                                                                                                                                                       ^
SyntaxError: unmatched '}'
